- 14: "About" icon (eye) in toolbar / Help menu replaced by "info" icon <2>
- 14: Arrangement group visibility now includes member diagrams, not only bounds <2>
- 15: Issue #400: Some editor controls had ignored Esc and Shift/Ctrl-Enter <2>
- 15: Enh. #714 Empty FINALLY block of TRY elements now by default suppressed <2>
- 15: Enh. #914 Text and comment fields in element editor now allow undo/redo <2>
- 15: Enh. #915 New structured editor for CASE elements preserving branches <2>
- 15: Enh. #917 Menu item to edit subroutines extended to included diagrams <2>
- 15: Bugfix #918 Missing root type filter in Find&Replace, unwanted checkbox <2>
- 15: Issue #919 More precise modification detection in Translator, undo/redo <2>
- 15: Issue #920 Consistent support for value literal "Infinity" / ∞ <2>
- 15: Bugfix #921 Type handling on outsourcing fixed (recursion, enumerators) <2>
- 15: Bugfix #922 Executor failed to interpret mixed array / record access <2>
- 15: Bugfix #923 Analyser gave false warnings regarding FOR-IN loops <2>
- 15: Bugfix #924 Erratic Analyser warnings on mixed record/array access paths <2>
- 15: Bugfix #925 Analyser always complained about constant record arguments <2>

Version: 3.30 (2019-10-06)
- 01: Issue #657: Spanish message in German locale replaced <2>
- 01: Enh. #662/1: Info box for groups redesigned into a tree view <2>
- 01: Enh. #662/2: Group visualisation with individual colours in Arranger <2>
- 01: Enh. #662/3: Arranger popup menu item to rearrange diagrams by groups <2>
- 01: Enh. #662/4: Option to save arrangements with relative coordinates <2>
- 01: Bugfix #664: Incorrect handling of modified diagrams on closing Arranger <2>
- 01: Bugfix #664: Disambiguated cancelling in AUTO_SAVE_ON_CLOSE mode <2>
- 01: Bugfix #515: Defective diagram positioning in Arranger mended <2>
- 02: Bugfix #665: Import of INSPECT statements from COBOL actually works now <2>
- 02: Bugfix #655: Arranger popup menu revised (item order, accelerator info) <2>