@@ -188,6 +188,7 @@ Current development version: 3.30-15 (2021-02-04)
 - 14: Arrangement group visibility now includes member diagrams, not only bounds <2>
 - 15: Issue #400: Some editor controls had ignored Esc and Shift/Ctrl-Enter <2>
 - 15: Enh. #714 Empty FINALLY block of TRY elements now by default suppressed <2>
+- 15: Issue #905: Analyser markers on collapsed or eclipsing elements ensured <2>
 - 15: Enh. #914 Text and comment fields in element editor now allow undo/redo <2>
 - 15: Enh. #915 New structured editor for CASE elements preserving branches <2>
 - 15: Enh. #917 Menu item to edit subroutines extended to included diagrams <2>
